k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: potato-api
  labels:
    app: potato-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: potato-api
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: potato-api
    spec:
      containers:
        - name: node
          image: ghcr.io/steamed-potatoes/potato-backend
