k8s/ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: potato-ingress
  namespace: ingress-nginx
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30000
