k8s/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: potato-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: potato-api
              servicePort: 8080
